# heroicons-reason-react

./: .envrc  .gitignore  README.md  dune-project  heroicons-reason-react.opam  package-lock.json  package.json
.github/workflows/: build-sample-project.yml  build.yaml
generate/: dune  generator.ml
src/: ReactApp.re  dune  s16.re  s20.re  s24.re
src/S16/: dune  solid.re
src/S20/: dune  solid.re
src/S24/: dune  outline.re  solid.re
src/some_name/: dune  solid.re
